--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,15 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>io.github.bohdanyarovyi</groupId>
+			<artifactId>ylmenu</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.17.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
